Fixed the height issue on woocommerce pages Made Stripe fields visible

--- a/wordpress-4.9.4/wordpress/wp-content/themes/skin-shapes/css/theme.css
+++ b/wordpress-4.9.4/wordpress/wp-content/themes/skin-shapes/css/theme.css
@@ -10563,6 +10563,9 @@ body {
 img[title="hero-image"] {
   width: 35% !important; }
 
+#full-width-page-wrapper, #woocommerce-wrapper {
+  padding-top: 100px; }
+
 .woocommerce-ordering {
   float: none !important;
   width: 25%; }
@@ -10591,8 +10594,14 @@ img[title="hero-image"] {
   background-color: #eb9e28;
   border-color: #d18e28; }
 
+#stripe-card-element, #stripe-exp-element, #stripe-cvc-element {
+  width: 100%; }
+
 .woocommerce-page div.product .woocommerce-tabs, .woocommerce div.product p.price, .lead, .woocommerce div.product form.cart .variations {
-  font-size: 150%; }
+  font-size: 100%; }
+  @media (min-width: 768px) {
+    .woocommerce-page div.product .woocommerce-tabs, .woocommerce div.product p.price, .lead, .woocommerce div.product form.cart .variations {
+      font-size: 150%; } }
 
 .woocommerce ul.products li.product {
   width: 46%; }
